<resources>
    <string name="app_name">TaskMaster</string>
    <string name="title_home">Home</string>
    <string name="login_button">Login</string>
    <string name="login_forgotPassword">Forgot Password</string>
    <string name="login_register">Register</string>
    <string name="hint_username_email">Username / E-mail</string>
    <string name="hint_password">Password</string>
    <string name="title_profile">Profile</string>
    <string name="title_group">Groups</string>
    <string name="title_list">Lists</string>
    <string name="application_name">TaskMaster</string>
    <string name="save">Save</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="more">More</string>
    <string name="members">Members</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="tags">Tags</string>
    <string name="description">Description</string>
    <string name="repeat">Repeat</string>
    <string name="ort">Ort</string>
    <string name="title">Title</string>
    <string name="group">Group</string>
    <string name="name">Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="delete_account">Delete Account</string>
    <string name="edit">Edit</string>
    <string name="no_deadline">Deadline is not set</string>
    <string name="deadline_placeholders">Deadline: %1$d/%2$d/%3$d</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="next_week">Next Week</string>
    <string name="select">Select</string>
    <string name="reset">Reset</string>
    <string name="never">Never</string>
    <string name="no_place">No place</string>
    <string name="no_group">No Group</string>
</resources>