<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="de.joachimsohn.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_list"
        android:name="de.joachimsohn.ui.lists.ListsFragment"
        android:label="@string/title_list"
        tools:layout="@layout/fragment_group_lists" />

    <fragment
        android:id="@+id/navigation_group"
        android:name="de.joachimsohn.ui.groups.GroupsFragment"
        android:label="@string/title_group"
        tools:layout="@layout/fragment_group_lists" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="de.joachimsohn.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile_private" />

</navigation>