<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:divider="@drawable/divider"
            android:orientation="vertical"
            android:showDividers="middle">

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:inputType="text" />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/indicator_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false">

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tabLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    app:tabGravity="fill"
                    app:tabMode="fixed">

                    <com.google.android.material.tabs.TabItem
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:icon="@drawable/list_filled"
                        android:text="@string/title_list" />

                    <com.google.android.material.tabs.TabItem
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:icon="@drawable/person_filled"
                        android:text="@string/members" />
                </com.google.android.material.tabs.TabLayout>

            </androidx.viewpager.widget.ViewPager>
        </FrameLayout>
    </LinearLayout>
</layout>